Add config files.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,10 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
+        server_version: '10.4'
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+
         
     orm:
         auto_generate_proxy_classes: true
