--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -1,5 +1,5 @@
 # services.yaml
 
 mysql:
-  type: mysql:10.0   # The MySQL version (ensure it's supported on Platform.sh)
+  type: mysql:10.4   # The MySQL version (it's supported on Platform.sh)
   disk: 1024           # Size of the persistent disk (in MB)
