--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ APP_ENV=dev
 APP_SECRET=8ad729f842c3a48fb72b0786eaa65909
 ###< symfony/framework-bundle ###
 
+APP_URL=https://main-bvxea6i-bho7r3tnhlezk.uk-1.platformsh.site
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -28,3 +30,8 @@ APP_SECRET=8ad729f842c3a48fb72b0786eaa65909
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="mysql://root:password@127.0.0.1:3306/awd"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN="smtp://rhysgregory90@gmail.com:tcqddbpwfwwgvxqp@smtp.gmail.com:587"
+###< symfony/mailer ###
+
