--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "symfony/maker-bundle": "^1.61"
     }
 }
